--- a/react-e-commerce--main/react-e-commerce--main/src/styles/Navbar.scss
+++ b/react-e-commerce--main/react-e-commerce--main/src/styles/Navbar.scss
@@ -1,15 +1,15 @@
 .navbar {
-    box-shadow: 0 4px 20px 0 rgb(0 0 0 / 10%), 0 1px 2px 0 rgb(0 0 0 / 6%);
+    box-shadow: 0 4px 20px 0 rgba(177, 169, 169, 0.1), 0 1px 2px 0 rgb(0 0 0 / 6%);
     background: #f4f3f0cc;
     display: flex;
-    align-items: center;
-    height: 8rem;
+    
+    height: 6rem;
 
 
 }
 
 .logo {
-    display: inline-block;
+    display: flex;
     padding: 0.5rem;
     text-decoration: none;
     font-size: 1.5rem;
