--- a/react-e-commerce--main/react-e-commerce--main/src/styles/Navbar.css
+++ b/react-e-commerce--main/react-e-commerce--main/src/styles/Navbar.css
@@ -2,8 +2,8 @@
   box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   background: rgba(244, 243, 240, 0.8);
   display: flex;
-  align-items: center;
-  height: 8rem;
+  align-items: normal;
+  height: 6rem;
 }
 
 .logo {
